--- a/contact.css
+++ b/contact.css
@@ -1,9 +1,49 @@
-
 :root {
   --primary-bg: #1a1a1a;
   --secondary-bg: #2a2a2a;
   --text-color: #ffffff;
   --border-color: #ffffff;
+  --bg-color: #ffffff;
+  --header-bg: #f5f5f5;
+  --header-shadow: rgba(0, 0, 0, 0.3);
+  --hover-color: #f09400;
+  --switch-bg: rgb(247, 93, 93);
+  --switch-color: #ffffff;
+  --form-bg-color: #d2d2d2;
+  --form-text-color: #333333;
+  --input-bg-color: #ffffff;
+  --input-text-color: #333333;
+  --button-bg-color: #333333;
+  --button-text-color: #ffffff;
+  --info-item-bg: #dddddd;
+  --info-item-text: #333333;
+  --btn-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  --back-color: #ffffff;
+  --text-color: #333333;
+
+}
+
+.dark-mode {
+  --bg-color: #111111;
+  --header-bg: #1d1d1d;
+  --header-shadow: rgba(212, 212, 212, 0.5);
+  --hover-color: #f39c12;
+  --switch-bg: #ffffff;
+  --switch-color: #f39c12;
+  --form-bg-color: #333333;
+  --form-text-color: #ffffff;
+  --input-bg-color: #555555;
+  --input-text-color: #ffffff;
+  --button-bg-color: #f0b90b;
+  --button-text-color: #333333;
+  --info-item-bg: #444444;
+  --info-item-text: #ffffff;
+  --btn-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  --back-color: #1a1a1a;
+  --text-color: #ffffff;
+
+ 
+
 }
 
 * {
@@ -16,41 +56,22 @@ body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
-  transition: background-color 0.5s, color 0.5s;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition: background-color 0.3s, color 0.3s;
 }
 
 body.dark-mode {
   background-color: var(--primary-bg);
   color: var(--text-color);
 }
-/*header*/
-:root {
-  --bg-color: #ffffff;
-  --text-color: #000000;
-  --header-bg: #f5f5f5;
-  --header-shadow: rgba(0, 0, 0, 0.3);
-  --hover-color: #f09400;
-  --switch-bg: rgb(247, 93, 93);
-  --switch-color: #ffffff;
-}
 
-.dark-mode {
-  --bg-color: #111111;
-  --text-color: #ffffff;
-  --header-bg: #222222;
-  --header-shadow: rgb(212, 212, 212, 0.5);
-  --hover-color: #f09400;
-  --switch-bg: #ffffff;
-  --switch-color: #f39c12;
-}
-
-
-
+/* Header */
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 20px;
   background-color: var(--header-bg);
   position: sticky;
   top: 0;
@@ -70,6 +91,7 @@ body.dark-mode {
   display: flex;
   list-style: none;
   transition: all 0.3s;
+  margin-top: 12px;
 }
 
 .nav-menu ul li {
@@ -161,36 +183,10 @@ body.dark-mode {
       margin-right: 20px;
   }
 }
+
 /*header*/
 
 /*contact*/
-:root {
-  --bg-color: #ffffff;
-  --text-color: #333333;
-  --form-bg-color: #d2d2d2;
-  --form-text-color: #333333;
-  --input-bg-color: #ffffff;
-  --input-text-color: #333333;
-  --button-bg-color: #333333;
-  --button-text-color: #ffffff;
-  --info-item-bg: #dddddd;
-  --info-item-text: #333333;
-  
-}
-
-.dark-mode {
-  --bg-color: #1a1a1a;
-  --text-color: #ffffff;
-  --form-bg-color: #333333;
-  --form-text-color: #ffffff;
-  --input-bg-color: #555555;
-  --input-text-color: #ffffff;
-  --button-bg-color: #f0b90b;
-  --button-text-color: #333333;
-  --info-item-bg: #444444;
-  --info-item-text: #ffffff;
-  
-}
 
 .contact-section {
   max-width: 1200px;
@@ -218,7 +214,7 @@ h1 {
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: background 0.3s;
 }
 
 .info-item:hover {
@@ -235,7 +231,7 @@ h1 {
   width: 48%;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--btn-box-shadow);
 }
 
 .form-container {
@@ -269,7 +265,7 @@ form textarea {
   padding: 10px 20px;
   border: none;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 14px;
   transition: transform 0.2s;
   width: 180px;
   border-radius: 5px;
@@ -457,7 +453,7 @@ footer p {
     align-items: center;
 }
 
-.arrow-up {
+.circle i  {
     font-size: 20px;
     color: #000;
 }
@@ -473,7 +469,7 @@ footer p {
         height: 40px;
     }
 
-    .arrow-up {
+    .circle i  {
         font-size: 18px;
     }
 
