--- a/home.css
+++ b/home.css
@@ -1,9 +1,63 @@
-
 :root {
     --primary-bg: #1a1a1a;
     --secondary-bg: #2a2a2a;
     --text-color: #ffffff;
-    --border-color: #ffffff;
+    --bg-color: #ffffff;
+    --header-bg: #f5f5f5;
+    --header-shadow: rgba(0, 0, 0, 0.3);
+    --hover-color: #f09400;
+    --switch-bg: rgb(247, 93, 93);
+    --switch-color: #ffffff;
+    --container-bg: #f5f5f5;
+    --text-color: #333333;
+    --border-color: #dddddd;
+    --btn-bg: #333333;
+    --btn-text: #ffffff;
+    --btn-hover-bg: #ff9900;
+    --btn-hover-text: #ffffff;
+    --social-icon-bg: #cecece;
+    --social-icon-color: #333333;
+    --hexagon-bg: #8a8888;
+    --left-bg: #ddd;
+    --header-color: #111;
+    --box-shadow: rgba(0, 0, 0, 0.1);
+    --company-bg: #d3d3d3;
+    --btn-border-color: #201f1f;
+    --btn-bg-color:#fa6001;
+    --subtext-color: #666666;
+    --button-bg: #ff5722;
+    --button-text: #ffffff;
+    --container-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+.dark-mode {
+    --bg-color: #111111;
+    --header-bg: #1d1d1d;
+    --header-shadow: rgba(212, 212, 212, 0.5);
+    --hover-color: #f39c12;
+    --switch-bg: #ffffff;
+    --switch-color: #f39c12;
+    --container-bg: #2a2a2a;
+    --text-color: #ffffff;
+    --border-color: #444444;
+    --btn-bg: #ffffff;
+    --btn-text: #1a1a1a;
+    --btn-hover-bg: #ffb0b0;
+    --btn-hover-text: #000000;
+    --social-icon-bg: #3a3a3a;
+    --social-icon-color: #ffffff;
+    --hexagon-bg: #ffffff;
+    --left-bg: #1a1a1a;
+    --header-color: #ffffff;
+    --box-shadow: rgba(229, 229, 229, 0.799);
+    --company-bg: #5c5c5c;
+    --btn-border-color: #ff7700;
+    --btn-bg-color: #b7b5b5;
+    --subtext-color: #b3b3b3;
+    --button-bg: #ff5722;
+    --button-text: #ffffff;
+    --container-shadow: 0px 0px 5px 5px rgba(189, 0, 0, 0.5);
+
 }
 
 * {
@@ -16,6 +70,8 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    background-color: var(--bg-color);
+    color: var(--text-color);
     transition: background-color 0.3s, color 0.3s;
 }
 
@@ -23,29 +79,8 @@ body.dark-mode {
     background-color: var(--primary-bg);
     color: var(--text-color);
 }
-/*header*/
-:root {
-    --bg-color: #ffffff;
-    --text-color: #000000;
-    --header-bg: #f5f5f5;
-    --header-shadow: rgba(0, 0, 0, 0.3);
-    --hover-color: #f09400;
-    --switch-bg: rgb(247, 93, 93);
-    --switch-color: #ffffff;
-}
 
-.dark-mode {
-    --bg-color: #111111;
-    --text-color: #ffffff;
-    --header-bg: #222222;
-    --header-shadow: rgb(212, 212, 212, 0.5);
-    --hover-color: #f09400;
-    --switch-bg: #ffffff;
-    --switch-color: #f39c12;
-}
-
-
-
+/* Header */
 .header {
     display: flex;
     justify-content: space-between;
@@ -70,6 +105,7 @@ body.dark-mode {
     display: flex;
     list-style: none;
     transition: all 0.3s;
+    margin-top: 12px;
 }
 
 .nav-menu ul li {
@@ -161,38 +197,10 @@ body.dark-mode {
         margin-right: 20px;
     }
 }
+
+
 /*header*/
 /*hero section*/
-
-:root {
-    --bg-color: #ffffff;
-    --container-bg: #f5f5f5;
-    --text-color: #333333;
-    --border-color: #dddddd;
-    --btn-bg: #333333;
-    --btn-text: #ffffff;
-    --btn-hover-bg: #ff9900;
-    --btn-hover-text: #ffffff;
-    --social-icon-bg: #cecece;
-    --social-icon-color: #333333;
-    --hexagon-bg: #8a8888;
-    --left-bg: #ddd;
-}
-
-.dark-mode {
-    --bg-color: #121212;
-    --container-bg: #2a2a2a;
-    --text-color: #ffffff;
-    --border-color: #444444;
-    --btn-bg: #ffffff;
-    --btn-text: #1a1a1a;
-    --btn-hover-bg: #ffb0b0;
-    --btn-hover-text: #000000;
-    --social-icon-bg: #3a3a3a;
-    --social-icon-color: #ffffff;
-    --hexagon-bg: #ffffff;
-    --left-bg: #1a1a1a;
-}
 
 .hero {
     display: flex;
@@ -303,12 +311,14 @@ p {
 h2 {
     font-size: 18px;
     margin-bottom: 10px;
-    font-weight: 300;
+    font-weight: 900;
+    color: var(--hover-color);
 }
 
 .bento-short {
     font-size: 28px;
     margin-bottom: 20px;
+    font-weight: 300;
 }
 
 .availability {
@@ -365,21 +375,6 @@ h2 {
 /*hero section*/
 /*company logo*/
 
-:root {
-    --bg-color: #ffffff;
-    --header-color: #111;
-    --box-shadow: rgba(0, 0, 0, 0.1);
-    --company-bg: #d3d3d3;
-    
-}
-
-.dark-mode {
-    --bg-color: #1a1a1a;
-    --header-color: #ffffff;
-    --box-shadow: rgba(229, 229, 229, 0.799);
-    --company-bg: #5c5c5c;
-}
-
 .companies {
     padding: 60px;
     text-align: center;
@@ -388,8 +383,7 @@ h2 {
 }
 
 .center-heading {
-    padding-top: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     font-weight: 800;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 28px;
@@ -481,26 +475,11 @@ h2 {
 /*company logo*/
 
 /*portfolio gallery*/
-:root {
-    --text-color: #000000;
-    --bg-color: #ffffff;
-    --btn-border-color: #201f1f;
-    --btn-bg-color:#fa6001;
-    
-}
-
-.dark-mode {
-        --text-color: #ffffff;
-        --bg-color: #121212;
-        --btn-border-color: #ff7700;
-        --btn-bg-color: #8e8d8d;
-    
-}
 
 .portfolio {
     max-width: 1200px;
     margin: 20px auto;
-    padding: 40px 40px;
+    padding: 40px 20px;
     text-align: center;
     box-sizing: border-box;
     border-radius: 12px;
@@ -508,16 +487,16 @@ h2 {
     align-items: center;
     color: var(--text-color);
     object-fit: cover;
-    
 }
 
-.portfolio-heading {
+.heading h1 {
     font-size: 2.5em;
     margin-bottom: 17px;
     color: var(--text-color);
 }
 
 .subtitle {
+    font-size: 1.2rem;
     color: var(--text-color);
     margin-bottom: 30px;
     text-align: center;
@@ -525,45 +504,15 @@ h2 {
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
-    
 }
 
-.filter-buttons {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-bottom: 30px;
-}
-
-.filter-btn {
-    background-color: transparent;
-    border: 1px solid var(--btn-bg-color);
-    color: var(--text-color);
-    cursor: pointer;
-    margin-top: 10px;
-    font-size: 1em;
-    height: auto;
-    width: auto;
-    margin: 0 10px;
-    padding: 10px 15px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.filter-btn:hover {
-    background-color: var(--btn-bg-color);
-    color: var(--text-color);
-}
-
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-    justify-items: center;
+.filter-buttons .btn {
+    margin: 0 5px;
 }
 
 .gallery-item {
     cursor: pointer;
+    
 }
 
 .card {
@@ -572,13 +521,13 @@ h2 {
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(153, 153, 153, 0.3);
     transition: transform 0.3s ease;
-    width: 100%;
+    width: 90%;
     max-width: 400px;
     height: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
-
 .card:hover {
     transform: translateY(-5px);
 }
@@ -657,66 +606,16 @@ h3 {
     opacity: 1;
 }
 
-.lightbox {
-    display: none;
-    position: fixed;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
-.lightbox-content {
-    display: block;
-    max-width: 90%;
-    max-height: 90%;
-    margin: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.close {
-    position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
+/* Responsive */
 @media (max-width: 768px) {
-    .gallery {
-        grid-template-columns: repeat(1, 1fr);
+    .gallery-item {
+        width: 100%;
     }
 }
 
 /*portfolio gallery*/
 
 /*kickstart section*/
-:root {
-    --bg-color: #ffffff;
-    --text-color: #333333;
-    --subtext-color: #666666;
-    --button-bg: #ff5722;
-    --button-text: #ffffff;
-    --container-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.1);
-    
-}
-
-.dark-mode {
-    --bg-color: #121212;
-    --text-color: #ffffff;
-    --subtext-color: #b3b3b3;
-    --button-bg: #ff5722;
-    --button-text: #ffffff;
-    --container-shadow: 0px 0px 5px 5px rgba(189, 0, 0, 0.5);
-   
-}
 
 .main-container {
     background-color: var(--bg-color);
@@ -858,7 +757,7 @@ footer p {
     background-color: #ddd; /* Slight hover effect for better UX */
 }
 
-.arrow-up {
+.circle i {
     font-size: 20px;
     color: #000;
 }
@@ -875,7 +774,7 @@ footer p {
         height: 40px;
     }
 
-    .arrow-up {
+    .circle i  {
         font-size: 18px;
     }
 
@@ -891,7 +790,7 @@ footer p {
         height: 40px;
     }
 
-    .arrow-up {
+    .circle i  {
         font-size: 16px;
     }
 
@@ -915,7 +814,7 @@ footer p {
         height: 35px;
     }
 
-    .arrow-up {
+    .circle i  {
         font-size: 14px;
     }
 }
