--- a/work.css
+++ b/work.css
@@ -1,9 +1,28 @@
-
 :root {
     --primary-bg: #1a1a1a;
     --secondary-bg: #2a2a2a;
-    --text-color: #ffffff;
     --border-color: #ffffff;
+    --bg-color: #ffffff;
+    --header-bg: #f5f5f5;
+    --header-shadow: rgba(0, 0, 0, 0.3);
+    --hover-color: #f09400;
+    --switch-bg: rgb(247, 93, 93);
+    --switch-color: #ffffff;
+    --text-color: #000000;
+    --btn-border-color: #201f1f;
+    --btn-bg-color:#fa6001;
+}
+
+.dark-mode {
+    --bg-color: #111111;
+    --header-bg: #1d1d1d;
+    --header-shadow: rgba(212, 212, 212, 0.5);
+    --hover-color: #f39c12;
+    --switch-bg: #ffffff;
+    --switch-color: #f39c12;
+    --text-color: #ffffff;
+    --btn-border-color: #ff7700;
+    --btn-bg-color: #8e8d8d;
 }
 
 * {
@@ -16,36 +35,17 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    transition: background-color 0.5s, color 0.5s;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    transition: background-color 0.3s, color 0.3s;
 }
 
 body.dark-mode {
     background-color: var(--primary-bg);
     color: var(--text-color);
 }
-/*header*/
-:root {
-    --bg-color: #ffffff;
-    --text-color: #000000;
-    --header-bg: #f5f5f5;
-    --header-shadow: rgba(0, 0, 0, 0.3);
-    --hover-color: #f09400;
-    --switch-bg: rgb(247, 93, 93);
-    --switch-color: #ffffff;
-}
 
-.dark-mode {
-    --bg-color: #111111;
-    --text-color: #ffffff;
-    --header-bg: #222222;
-    --header-shadow: rgb(212, 212, 212, 0.5);
-    --hover-color: #f09400;
-    --switch-bg: #ffffff;
-    --switch-color: #f39c12;
-}
-
-
-
+/* Header */
 .header {
     display: flex;
     justify-content: space-between;
@@ -70,6 +70,7 @@ body.dark-mode {
     display: flex;
     list-style: none;
     transition: all 0.3s;
+    margin-top: 12px;
 }
 
 .nav-menu ul li {
@@ -161,29 +162,16 @@ body.dark-mode {
         margin-right: 20px;
     }
 }
+
 /*header*/
 
 /*portfolio gallery*/
-:root {
-    --text-color: #000000;
-    --bg-color: #ffffff;
-    --btn-border-color: #201f1f;
-    --btn-bg-color:#fa6001;
-    
-}
-
-.dark-mode {
-        --text-color: #ffffff;
-        --bg-color: #121212;
-        --btn-border-color: #ff7700;
-        --btn-bg-color: #8e8d8d;
-    
-}
+  
 
 .portfolio {
     max-width: 1200px;
     margin: 20px auto;
-    padding: 40px 40px;
+    padding: 40px 20px;
     text-align: center;
     box-sizing: border-box;
     border-radius: 12px;
@@ -193,13 +181,14 @@ body.dark-mode {
     object-fit: cover;
 }
 
-.portfolio-heading {
+.heading h1 {
     font-size: 2.5em;
     margin-bottom: 17px;
     color: var(--text-color);
 }
 
 .subtitle {
+    font-size: 1.2rem;
     color: var(--text-color);
     margin-bottom: 30px;
     text-align: center;
@@ -207,45 +196,15 @@ body.dark-mode {
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
-    
 }
 
-.filter-buttons {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-bottom: 30px;
-}
-
-.filter-btn {
-    background-color: transparent;
-    border: 1px solid var(--btn-bg-color);
-    color: var(--text-color);
-    cursor: pointer;
-    margin-top: 10px;
-    font-size: 1em;
-    height: auto;
-    width: auto;
-    margin: 0 10px;
-    padding: 10px 15px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.filter-btn:hover {
-    background-color: var(--btn-bg-color);
-    color: var(--text-color);
-}
-
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-    justify-items: center;
+.filter-buttons .btn {
+    margin: 0 5px;
 }
 
 .gallery-item {
     cursor: pointer;
+    
 }
 
 .card {
@@ -254,13 +213,13 @@ body.dark-mode {
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(153, 153, 153, 0.3);
     transition: transform 0.3s ease;
-    width: 100%;
+    width: 90%;
     max-width: 400px;
     height: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
-
 .card:hover {
     transform: translateY(-5px);
 }
@@ -339,44 +298,12 @@ h3 {
     opacity: 1;
 }
 
-.lightbox {
-    display: none;
-    position: fixed;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
-.lightbox-content {
-    display: block;
-    max-width: 90%;
-    max-height: 90%;
-    margin: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.close {
-    position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
+/* Responsive */
 @media (max-width: 768px) {
-    .gallery {
-        grid-template-columns: repeat(1, 1fr);
+    .gallery-item {
+        width: 100%;
     }
 }
-
 /*portfolio gallery*/
 /*footer*/
 
@@ -424,7 +351,7 @@ footer p {
     align-items: center;
 }
 
-.arrow-up {
+.circle i  {
     font-size: 20px;
     color: #000;
 }
@@ -440,7 +367,7 @@ footer p {
         height: 40px;
     }
 
-    .arrow-up {
+    .circle i  {
         font-size: 18px;
     }
 
