--- a/brand.css
+++ b/brand.css
@@ -201,7 +201,7 @@ body.dark-mode {
 .image-placeholder {
     width: 100%;
     height: 300px; 
-    background-image: url('img/single-project.jpg'); 
+    background-image: url('img/single.jpg'); 
     background-size: cover;
     background-position: center;
     background-color: orange; 
