--- a/home.css
+++ b/home.css
@@ -17,7 +17,7 @@
     --btn-hover-text: #ffffff;
     --social-icon-bg: #cecece;
     --social-icon-color: #333333;
-    --hexagon-bg: #8a8888;
+    --hexagon-bg: #ff9d00;
     --left-bg: #ddd;
     --header-color: #111;
     --box-shadow: rgba(0, 0, 0, 0.1);
