--- a/contact.css
+++ b/contact.css
@@ -390,8 +390,8 @@ form textarea {
   color: white;
 }
 
-.twitter {
-  background: #55ACEE;
+.github {
+  background: #323232;
   color: white;
 }
 
